<resources>
    <string name="app_name">Trivia Wars</string>

    <string name="logo_desc">Logo of Trivia Wars</string>

    <string name="sign_up">Sign Up</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_in_title">Create an Account</string>

    <string name="hint_full_name">Full Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_username">Email or Username</string>
    <string name="hint_password">Password</string>
    <string name="terms_and_conditions">By signing up, you agree to the
        <a href="https://www.google.com/">Terms of Service</a> and
        <a href="https://www.google.com/">Privacy Policy</a>
    </string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="dashboard_title">Dashboard</string>
    <string name="profile_title">Profile</string>
    <string name="settings_title">Settings</string>
    <string name="logout_title">Log out</string>
    <string name="menu_help_title">Help</string>
    <string name="faq_title">FAQ</string>
    <string name="about_us_title">About us</string>

    <string name="dashboard_tabs_home">Home</string>
    <string name="dashboard_tabs_trivia">Trivia</string>
    <string name="dashboard_tabs_ranking">Ranking</string>

    <string name="logout_message">Are you sure you want to log out?\n\nIf you are current offline progress on your trivias, it will be lost.</string>
    <string name="ok_dialog_action">OK</string>
    <string name="cancel_dialog_action">Cancel</string>

    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="trivia_cover_img_desc">Cover picture of the current trivia</string>
    <string name="follow_btn">Follow</string>
    <string name="followers_summarize_tbl">Followers</string>
    <string name="total_questions_summarize_tbl">Total Questions</string>
    <string name="ranking_trivia_title">Ranking</string>
    <string name="home_fav_trivia_title">Favorite Trivia</string>

    <string name="numeric_value">%d</string>
    <string name="q_counter">%d / %d</string>
    <string name="question_points_title">Value</string>
    <string name="play_again">Play Again</string>
    <string name="your_score">Your Score: </string>
</resources>
