<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_person_outline"
            android:title="@string/profile_title" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings_title" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_exit_to_app"
            android:title="@string/logout_title" />

        <item android:title="@string/menu_help_title">
            <menu>
                <item
                    android:id="@+id/nav_faq"
                    android:icon="@drawable/ic_menu_help_outline"
                    android:title="@string/faq_title" />
                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/ic_menu_people_outline"
                    android:title="@string/about_us_title" />
            </menu>
        </item>
    </group>
</menu>