<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="ve.ucv.triviawars.ui.DashboardViewPagerFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/fragment_dashboard_view_pager" >
        <action
            android:id="@+id/action_to_triviaDetail"
            app:destination="@id/triviaDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutUsFragment"
        android:name="ve.ucv.triviawars.ui.AboutUsFragment"
        android:label="@string/about_us_title"
        tools:layout="@layout/fragment_about_us" />
    <fragment
        android:id="@+id/faqFragment"
        android:name="ve.ucv.triviawars.ui.FaqFragment"
        android:label="@string/faq_title"
        tools:layout="@layout/fragment_faq" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="ve.ucv.triviawars.ui.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="ve.ucv.triviawars.ui.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/dashboardHomeFragment"
        android:name="ve.ucv.triviawars.ui.HomeFragment"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/userRankingFragment"
        android:name="ve.ucv.triviawars.ui.UserRankingFragment"
        tools:layout="@layout/fragment_user_ranking_list" />

    <fragment
        android:id="@+id/triviaListFragment"
        android:name="ve.ucv.triviawars.ui.TriviaListFragment"
        tools:layout="@layout/fragment_trivia_list" />

    <fragment
        android:id="@+id/triviaDetailFragment"
        android:name="ve.ucv.triviawars.ui.TriviaDetailFragment"
        android:label="{triviaTitle}"
        tools:layout="@layout/fragment_trivia_detail">
        <argument
            android:name="triviaId"
            app:argType="integer" />
        <argument
            android:name="triviaTitle"
            app:argType="string" />
    </fragment>
</navigation>