<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@null"
    tools:context=".AuthSignUpFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.TriviaWars.TextInputLayout"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_input_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.TriviaWars.TextInputLayout"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.TriviaWars.TextInputLayout"
        android:layout_marginTop="30dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        android:textColor="@android:color/white"
        android:textColorLink="@color/cyan"
        android:layout_marginTop="50dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_action_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/sign_in">
    </com.google.android.material.button.MaterialButton>

</LinearLayout>
