<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".SignUpActivity"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="30dp">

        <ImageView
            android:id="@+id/sign_up_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/trivia_wars_logo"
            android:layout_gravity="center"
            android:rotation="-8"
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:padding="5dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/sign_up_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                style="@style/EditTextStyle"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutStyle"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/sign_up_input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                style="@style/EditTextStyle"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PasswordInputLayoutStyle"
            android:layout_marginTop="30dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/sign_up_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                style="@style/EditTextStyle"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"
            android:textColor="@android:color/white"
            android:textColorLink="@color/cyan"
            android:layout_marginTop="50dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_action_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            style="@style/RoundedButtonStyle"
            android:text="@string/sign_in">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>
</ScrollView>