<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="triviaViewModel"
            type="ve.ucv.triviawars.viewmodels.TriviaDetailViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_pattern_1"
        tools:context=".ui.TriviaDetailFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/trivia_cover_img"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:contentDescription="@string/trivia_cover_img_desc"
                    app:backgroundColor="@{triviaViewModel.trivia.backgroundColor}"
                    app:imageUrl="@{triviaViewModel.trivia.imageUrl}"
                    tools:src="@drawable/game_of_thrones_trivia_icon" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/mtrl_card_spacing"
                    android:layout_marginLeft="@dimen/mtrl_card_spacing"
                    android:layout_marginTop="-20dp">

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="2"
                        android:rowCount="2">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_columnWeight="1"
                            android:gravity="center"
                            android:text="@string/followers_summarize_tbl"
                            android:textAllCaps="true"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_columnWeight="1"
                            android:gravity="center"
                            android:text="@string/total_questions_summarize_tbl"
                            android:textAllCaps="true"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/trivia_followers_size"
                            android:layout_columnWeight="1"
                            android:gravity="center"
                            android:text="@{@string/numeric_value(triviaViewModel.trivia.followers)}"
                            android:textAllCaps="true"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/trivia_questions_size"
                            android:layout_columnWeight="1"
                            android:gravity="center"
                            android:text="@{@string/numeric_value(triviaViewModel.trivia.followers)}"
                            android:textAllCaps="true"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </GridLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/trivia_desc_cv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mtrl_card_spacing">

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:columnCount="4"
                        android:orientation="horizontal"
                        android:rowCount="1">

                        <TextView
                            android:id="@+id/trivia_desc"
                            android:layout_height="wrap_content"
                            android:maxWidth="65dp"
                            android:layout_columnWeight="4"
                            android:text="@{triviaViewModel.trivia.description}"
                            tools:text="Mollit sint adipisicing dolore in incididunt minim incididunt qui tempor nisi occaecat est sunt. Mollit duis culpa esse amet. Nisi amet Lorem elit et exercitation culpa mollit consequat culpa sint reprehenderit elit. Consectetur irure adipisicing quis consequat ullamco." />

<!--                        <com.google.android.material.button.MaterialButton-->
<!--                            android:id="@+id/trivia_follow_btn"-->
<!--                            android:layout_columnWeight="1"-->
<!--                            android:layout_gravity="center"-->
<!--                            android:paddingTop="8dp"-->
<!--                            android:paddingBottom="8dp"-->
<!--                            android:text="@string/follow_btn" />-->
                    </GridLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/trivia_ranking_cv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mtrl_card_spacing">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_margin="10dp"
                            android:drawableEnd="@drawable/ic_star"
                            android:drawableTint="@color/gold"
                            android:textAppearance="@style/TextAppearance.TriviaWars.Headline6"
                            android:text="@string/ranking_trivia_title"
                            android:textAllCaps="true"
                            android:drawableRight="@drawable/ic_star" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/user_ranking_list_rv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/trivia_play_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="15dp"
            android:scaleType="center"
            app:tint="@android:color/white"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_play" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>